# clipboard-snap-shortcut

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  citation.bib  config.toml  config.toml.example  pyproject.toml
.claude/skills/recent-clips/: Makefile  SKILL.md
.claude/skills/recent-clips/scripts/: launchd.sh  recent_clips.py  tag_clips.py  triage_cron.sh  triage_prompt.txt
.github/workflows/: ci.yml
launchd/: com.htlin.clipboard-snap.mac-push.plist
scripts/: push_maccy_clips.sh
skills/clipboard-snap-shortcut/: SKILL.md
skills/clipboard-snap-shortcut/agents/: openai.yaml
skills/clipboard-snap-shortcut/assets/: schema.sql
skills/clipboard-snap-shortcut/references/: turso-http.md
skills/clipboard-snap-shortcut/scripts/: build_shortcut.py  check_shortcut.py  sign_shortcut.py
