[project]
name = "clipboard-snap-shortcut"
version = "0.1.0"
description = "Build and validate the Clipboard Snap Apple Shortcut"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hsieh-Ting Lin" },
]
requires-python = ">=3.12"
dependencies = []
keywords = [
    "apple-shortcuts",
    "clipboard",
    "ios-shortcuts",
    "libsql",
    "turso",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py312"
